Update all .md relevant files; add vertical flip functionality to the application